--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <title>Vicious Cycles</title>
     <meta charset="utf-8">
+    <style>
+      body {background-color: #E7FBFB;}
+      header {color: #010B5B; font-size: 4em; text-align: center;}
+    </style>
 </head>
 
 <body>
